k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: room-speak-prod
  labels:
    name: room-speak-prod
    environment: production
