k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roomspeak-backend
  namespace: roomspeak-prod
  labels:
    app: roomspeak
    environment: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: roomspeak
  template:
    metadata:
      labels:
        app: roomspeak
        environment: production
    spec:
      containers:
        - name: roomspeak-backend
          image: ghcr.io/qrave1/roomspeak:2025_08_30_18_22_56
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              memory: "1Mi"
            limits:
              memory: "256Mi"
